--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= content_for?(:page_title) ? 'ShopWithMe - ' + yield(:page_title) : (raise "no title" ) %></title>
+  <title>
+    <% if Rails.env == 'production' %>
+      <%= 'ShopWithMe' + content_for?(:page_title) ? ' - ' + yield(:page_title) : "" %></title>
+      <meta name="description" content="<%= 'ShopWithMe' + content_for?(:page_description) ? ' - ' + yield(:page_description) : "" %>"/>
+    <% else %>
+      <%= content_for?(:page_title) ? 'ShopWithMe - ' + yield(:page_title) : (raise "no title" ) %></title>
+      <meta name="description" content="<%= content_for?(:page_description) ? 'ShopWithMe - ' + yield(:page_description) : (raise "no page_description" ) %>"/>
+
+    <% end %>
+    
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
-
-  <meta name="description" content="<%= content_for?(:page_description) ? 'ShopWithMe - ' + yield(:page_description) : (raise "no page_description" ) %>"/>
-
 </head>
 <body class="<%= params[:controller] + " " + params[:action] %>">
 
