--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
 <head>
   <title>
     <% if Rails.env == 'production' %>
-      <%= 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "") %></title>
+      <%= 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "" ) %></title>
       <meta name="description" content="<%= 'ShopWithMe' + (content_for?(:page_description) ? ' - ' + yield(:page_description) : "") %>"/>
     <% else %>
-      <%= content_for?(:page_title) ? 'ShopWithMe - ' + (yield(:page_title) : (raise "no title" )) %></title>
+      <%= 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : (raise "no title" )) %></title>
       <meta name="description" content="<%= content_for?(:page_description) ? 'ShopWithMe - ' + yield(:page_description) : (raise "no page_description" ) %>"/>
 
     <% end %>
