--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,47 @@
+<div class="container-fluid footer">      
+  <div class="row-fluid">         
+     <div class="span3">   
+      <!-- 
+      <h4 class="">Information</h4>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Delivery Information</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms &amp; Conditions</a></li>
+      </ul>
+      -->
+    </div>
+    <div class="span3">
+      <!-- 
+      <h4>My Account</h4>
+      <ul>
+        <li><a href="#">My Account</a></li>
+        <li><a href="#">Order History</a></li>
+        <li><a href="#">Wish List</a></li>
+        <li><a href="#">Newsletter</a></li>
+      </ul>
+      -->
+    </div>
+    <div class="span3">
+      <!-- <h4>Connect with us</h4>
+      <a href="#"><img src="img/social-facebook.png" alt="Facebook" /></a>
+      <a href="#"><img src="img/social-twitter.png" alt="Twitter" /></a>
+      <a href="#"><img src="img/social-rss.png" alt="RSS" /></a>
+      <a href="#"><img src="img/social-flickr.png" alt="Flickr" /></a> -->
+    </div>
+    <div class="span3">
+      <div class="company_info">
+        <h4>Shop With Me</h4>
+      </div>
+    </div>          
+  </div>  
+</div>
+
+
+
+<!-- 
 <hr>
 <footer>
-    <!-- AddThis Button BEGIN -->
     <div class="clearfix addthis_toolbox addthis_default_style ">
       <p class="pull-left">&copy; Shop-With.me</p>
       <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -10,6 +51,6 @@
     </div>
     <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51993ef2289b1b22"></script>
-    <!-- AddThis Button END -->
 
 </footer>
+-->
